[package]
name = "cometd"
version = "0.1.0"
authors = ["Thibaut Roche <thibaut.roche.perso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.103"
serde_json = "1.0.42"
log = "0.4.8"

[dev-dependencies]
mockito = "0.22.0"
